--- a/src/components/Skills/Skill.css
+++ b/src/components/Skills/Skill.css
@@ -12,7 +12,7 @@
   border: 2px solid gold;
   width: 100px;
   height: 100px;
-  background-color: #640469;
+  background-color: rgb(44, 41, 41);
   border-radius: 10px;
   box-shadow: 0 0 5px gold;
   transform: translate(-20px, -20px);
